# rexbee_zigbee_stack

./: CMakeLists.txt  readme.md
app/: weak_function.c
app/app_api_usage/: @button_ev_usage.c  @button_usage[deprecate].c  @cli_usage.c  @easy_token_usage.c  @eeprom_check_usage.c  @event_usage.c  @fast_gpio_usage.c  @fast_power_cycle_usage.c  @flash_usage.c  @gpio_usage.c  @led_task_usage.c  @mem_heap_usage.c  @network_mgmt_usage.c  @nvm2_beta_usage[deprecate].c  @nvm3_beta_usage.c  @nvm_usage.c  @ota_usage.c  @pwm_usage.c  @reporting_config_usage.c  @sim_i2c_usage.c  @tag_usage.c  @tc_link_plugin_usage.c  @uart_usage.c  @vcom_usage.c  @zbck_usage.c  @zigbee_send_usage.c  app_common.h  cluster_spec_command_handler.i  global_command_handler.i  pin_def.h
app/app_api_usage/common/: common_implements.c
app/app_hal_mfglib_demo/: app_mfg_lib_demo_callbacks.c  mfglib.h
app/app_router_on_off_demo/: app_attr_handler.i  app_command_handler.i  app_common.h  app_router_on_off_demo_callbacks.c  onoff_plugin_handler.i  pin_def.h
app/app_router_on_off_demo/common/: common_implements.c
app/app_router_transparent_demo/: app_common.h  app_router_transparent_demo_callbacks.c  pin_def.h
app/app_router_transparent_demo/common/: common_implements.c
app/app_router_uart_demo/: app_common.h  app_router_uart_demo_callbacks.c  app_sim_eep_assign.h  pin_def.h  uart_protocol_desc.c  uart_protocol_desc.h
app/app_router_uart_demo/common/: app_sim_eep.h  common_implements.c
app/app_zed_door_sensor_demo/: app_common.h  app_zed_door_sensor_demo_callbacks.c  pin_def.h
app/app_zed_door_sensor_demo/common/: common_implements.c
app/include/: af-types.h  app_message_queue.h  attribute-id.h  cluster-id.h  command-id.h  efr32-mirco-common.h  ember-types.h  enums.h  error-def.h  error.h  fast_join_apis.h  global_apis.h  global_binding_mgmt_apis.h  global_button_apis.h  global_common.h  global_group_scene_apis.h  global_hal_common_apis.h  global_lighting_apis.h  global_mass_production_test_apis.h  global_mem_heap_apis.h  global_message_apis.h  global_nvm_apis.h  global_nwk_mgmt_apis.h  global_string_util_apis.h  global_zll_apis.h  gp-types.h  platform-common.h  rename_function.h  rex_ota_image_type.h  uart_message_queue.h  zcl-attr-desc.h  zcl-global-command-desc.h  zcl-spec-command-desc.h  zll-types.h
app/include/board/8258/: adc.h  aoa.h  boot.link  boot_router.link  clock.h  compiler.h  cstartup_8258.S  driver_8258.h  fast_gpio.h  flash.h  gpio_8258.h  pm.h  printf.h  pwm.h  pwm_driver.h  tc32.c  tl-core.h  uart.h  usb.h  watchdog.h
app/include/board/8258/usbstd/: types.h
app/include/device/: sim_win_panel.h
doc/: readme.md  sdk_architecture.md
doc/app_api_usage/: app_eeprom_usage.txt  app_pwm_usage.txt
tools/: rex_global_coo_pre_build.sh  rex_global_post_build.sh  rex_global_pre_build.sh  rex_global_router_pre_build.sh
